.idea into gitignore

--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "matcha",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "This project is about creating a dating website.",
   "main": "index.js",
-  "scripts": {
-    "test": "\"echo \\\"Error: no test specified\\\" && exit 1\""
-  },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gde-pass/Matcha.git"
   },
   "keywords": [
-    "Matcha"
+    "Matcha",
+    "love",
+    "gde-pass",
+    "match",
+    "dating",
+    "website"
   ],
   "author": "gde-pass",
   "license": "ISC",
