Struct presque finie

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/gde-pass/Matcha#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "mysql": "^2.16.0",
     "socket.io": "^2.1.1"
   }
 }
