--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "matcha",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "This project is about creating a dating website.",
-  "main": "config/server.js",
+  "main": "app/config/server.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gde-pass/Matcha.git"
