--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "mysql": "^2.16.0",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "validator": "^10.9.0"
   }
 }
