--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
+    "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "express-mysql-session": "^2.0.1",
+    "express-session": "^1.15.6",
     "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.4.0",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.7",
     "path": "^0.12.7",
