--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "path": "^0.12.7",
     "socket.io": "^2.1.1",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^7.31.0",
     "validator": "^10.9.0"
   }
 }
