flexslider gérer par NPM

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-handlebars": "^3.0.0",
     "express-mysql-session": "^2.0.1",
     "express-session": "^1.15.6",
+    "flexslider": "^2.7.1",
     "fs": "0.0.1-security",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
