--- a/package.json
+++ b/package.json
@@ -34,10 +34,14 @@
     "express-mysql-session": "^2.0.1",
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
+    "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.4.0",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0",
+    "nodemailer": "^4.7.0",
     "nodemon": "^1.18.7",
     "path": "^0.12.7",
+    "sendmail": "^1.4.1",
     "socket.io": "^2.1.1",
     "validator": "^10.9.0"
   }
