--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "express-session": "^1.15.6",
     "flexslider": "^2.7.1",
     "fs": "0.0.1-security",
+    "is-empty": "^1.2.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.4.0",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0",
+    "nodemailer": "^4.7.0",
     "nodemon": "^1.18.7",
     "path": "^0.12.7",
     "socket.io": "^2.1.1",
