--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "express-session": "^1.15.6",
     "flexslider": "^2.7.1",
     "fs": "0.0.1-security",
+    "geolib": "^2.0.24",
+    "glob": "^7.1.3",
+    "google-distance": "^1.0.1",
     "is-empty": "^1.2.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
