--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/gde-pass/Matcha#readme",
   "dependencies": {
+    "cryptiles": ">=4.1.2"
     "request": ">=2.68.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
