--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "homepage": "https://github.com/gde-pass/Matcha#readme",
   "dependencies": {
-    "cryptiles": ">=4.1.2"
+    "hawk": ">=3.1.3",
+    "cryptiles": ">=4.1.2",
     "request": ">=2.68.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
