--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
   },
   "homepage": "https://github.com/gde-pass/Matcha#readme",
   "dependencies": {
-    "hawk": ">=3.1.3",
-    "cryptiles": ">=4.1.2",
-    "request": ">=2.68.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
+    "bootstrap-slider": "^10.4.2",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
+    "cryptiles": ">=4.1.2",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
@@ -42,6 +41,7 @@
     "geolib": "^2.0.24",
     "glob": "^7.1.3",
     "google-distance": "^1.0.1",
+    "hawk": ">=3.1.3",
     "is-empty": "^1.2.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
@@ -50,7 +50,9 @@
     "mysql": "^2.16.0",
     "nodemailer": "^4.7.0",
     "nodemon": "^1.18.7",
+    "nouislider": "^12.1.0",
     "path": "^0.12.7",
+    "request": ">=2.68.0",
     "socket.io": "^2.1.1",
     "str-replace": "0.0.5",
     "sweetalert2": "^7.31.0",
