--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matcha",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "This project is about creating a dating website.",
   "main": "app/server.js",
   "scripts": {
@@ -28,6 +28,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "bootstrap-slider": "^10.4.2",
+    "chosen-js": "^1.8.7",
     "cli-progress": "^2.1.1",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
